@@ -3,3 +3,6 @@ Documentation=help
 Plugins=bin
 Prefix=..
 Translations=translations
+
+[Platforms]
+WindowsArguments=fontengine=freetype
