@@ -81,6 +81,12 @@
         <i>Supported script formats are</i>: js
         <br></li>
 
+        <li><b>Fonts</b>: This Resource type is used in the <a href="qrc:/resources/help/editor/nodes/node_help.html">Scene Scripts</a> to
+        set the font-family of a block of text to a custom font. The name of the resource is not used anywhere and is only for flavour and consistency.
+        To use the custom fonts you need to reference the font family(ies) specified in the font file.<br>
+        <i>Supported font formats are</i>: tff, otf, otc, ttf, ttc, pfa, bdf, cff, pcf, qpf2, fnt, pcf"
+        <br></li>
+
         <li><b>Databases (currently unused)</b>: This Resource type is used for various things in a project.
         One thing all types have in common is that all of them can be opened in
         any external text editor to edit the contents.<br>
